nav color fixed and better legibility. Bug fixed between nav and the following component

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,7 @@ body,
 #root {
     display: flex;
     flex-direction: column;
+    gap: 1rem;
 }
 
 @theme {
